# auto-claims-demo

./: .gitignore  AGENTS.md  Makefile  README.md  claims.db
.agents/skills/auto-claims-reviewer/: SKILL.md
.github/workflows/: ci.yaml  osv-scanner.yml
agent-engine/: README.md  pyproject.toml
agent-engine/app/: __init__.py
agent-engine/app/app_utils/: deploy.py  telemetry.py  typing.py
ai-service/: .dockerignore  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  appointment_agent.py  car_damage_detector.py  claims_agent.py  main.py  pyproject.toml  repair_shop_agent.py  requirements.txt  shared_auth.py  telemetry.py  test_auth.py  test_auth_async.py  vision.py
ai-service/.cloudbuild/: deploy.yaml
ai-service/base/: Dockerfile  base.yaml  pyproject.toml
ai-service/tests/: conftest.py  test_ai_service.py  test_appointment_agent.py  test_appointment_agent_extra.py  test_car_damage_detector.py  test_car_damage_detector_extra.py  test_car_damage_detector_extra2.py  test_claims_agent.py  test_claims_agent_extra.py  test_main_routes.py  test_process_claims_logic.py  test_repair_shop_agent.py  test_shared_auth.py
assessor-agent/: Dockerfile  GEMINI.md  Makefile  README.md  iam.py  pyproject.toml  verify_agent_config.py
assessor-agent/.cloudbuild/: deploy-to-prod.yaml  deploy.yaml  pr_checks.yaml  staging.yaml
assessor-agent/app/: agent.py  agent_config.py  agent_engine_app.py  agent_executor.py  fast_api_app.py  main.py
assessor-agent/app/app_utils/: deploy.py  otel_context_patch.py  telemetry.py  typing.py
assessor-agent/tests/: conftest.py  test_agent.py  test_agent_extra.py
backend/: .dockerignore  .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  claims.db  go.mod  go.sum  main.go
backend/.cloudbuild/: deploy.yaml
backend/cmd/generate_seed/: main.go
backend/data/: insurance_claims.csv
backend/database/: database.go
backend/deployment/cd/: dev-cloudbuild.yaml
backend/handlers/: analyze_test.go  book_test.go  coverage_test.go  get_test.go  handlers.go  handlers_test.go  list_test.go  main_test.go  mcp.go
backend/internal/database/: database.go
backend/internal/handlers/: analyze_test.go  book_test.go  coverage_test.go  get_test.go  handlers.go  handlers_test.go  list_test.go  main_test.go  mcp_test.go
backend/internal/pkg/: go.mod  go.sum
backend/internal/pkg/seeder/: seeder.go  seeder_test.go
backend/internal/pkg/telemetry/: telemetry.go  telemetry_test.go
backend/models/: models.go
backend/pkg/gcs/: gcs.go  gcs_test.go
backend/pkg/seeder/: seeder.go  seeder_test.go
backend/pkg/telemetry/: telemetry.go
backend/sql/: create_db.sql  schema.sql  seed.sql
frontend/: .dockerignore  .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  index.html  package-lock.json  package.json  server.js  vite.config.js
frontend/.cloudbuild/: deploy.yaml
frontend/deployment/cd/: dev-cloudbuild.yaml
frontend/public/: privacy.html  terms.html
frontend/src/: App.vue  api.js  main.js  style.css  telemetry.js
frontend/src/components/: HelloWorld.vue
frontend/src/components/layout/: Footer.vue  SideNavBar.vue  TopNavBar.vue
frontend/src/router/: index.js
frontend/src/views/: ClaimDetail.vue  Dashboard.vue  Documents.vue  Login.vue  NewClaim.vue  Privacy.vue  Settings.vue  Terms.vue
infra/: Makefile  setup.py  setup_lb.py
infra/base/: Dockerfile  base.yaml  pyproject.toml
loadgen/: .gcloudignore  .gitignore  Dockerfile  ENV  Makefile  README.md  deploy-loadgen-to-cloud-run.sh
loadgen/.cloudbuild/: deploy.yaml
loadgen/api-load-generator/: .gitignore  README.md  api-load-generator.js  package-lock.json  package.json  tracing.js
loadgen/api-load-generator/config/: config.json
loadgen/api-load-generator/lib/: ScheduleSelector.js  context-builder.js  handlebars-helpers.js  ipGenerator.js  load-generator.js  server.js  utils.js  weightedRandomSelector.js
loadgen/lib/: utils.sh
plan/: DESIGN.md  spec.md
processor-agent/: .coveragerc  .dockerignore  .gitignore  Dockerfile  GEMINI.md  Makefile  README.md  iam.py  pyproject.toml
processor-agent/.cloudbuild/: deploy-to-prod.yaml  deploy.yaml  pr_checks.yaml  staging.yaml
processor-agent/app/: agent.py  agent_engine_app.py  fast_api_app.py  mcp_helper.py
processor-agent/app/app_utils/: custom_types.py  deploy.py  repair_costs.py  telemetry.py  typing.py
processor-agent/tests/: test_agent.py  test_agent_extra.py
processor-agent/tests/unit/: test_agent_tools.py
repair-shop-agent/: Makefile  README.md  deployment_metadata.json  iam.py  pyproject.toml
repair-shop-agent/.cloudbuild/: deploy.yaml
repair-shop-agent/app/: agent.py  agent_engine_app.py
repair-shop-agent/app/app_utils/: custom_types.py  deploy.py  telemetry.py
repair-shop-agent/tests/: test_agent.py  test_agent_extra.py
tests/: policy_numbers.csv
