[project]
name = "ai-service-base-image"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-aiplatform>=1.136.0",
    "google-cloud-vision>=3.12.1",
    "python-multipart>=0.0.22",
    "ultralytics>=8.4.13",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.1.0",
    "huggingface-hub>=1.4.1"
]
